--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,62 +10,41 @@ ol {
   padding: 0;
 }
 
+p {
+  margin: 0;
+}
+
 img {
   height: auto;
   max-width: 100%;
   display: block;
 }
 
-section {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-}
-
-.gallery {
-  padding: 24px 156px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 24px;
-  margin: 0;
-}
-
-.gallery-item {
-  transition: transform 250ms ease-in-out;
-}
-
-.gallery-item:hover {
-  transform: scale(105%);
-}
-
-.feedback-form {
-  padding-top: 24px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-}
-
-label {
-  display: flex;
-  flex-direction: column;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
+a {
+  text-decoration: none;
   color: #2e2f42;
-  margin-bottom: 8px;
+  text-transform: none;
 }
+
+
+
+.form {
+  padding-top: 36px;
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 32px;
+  width: 372px;
+}
+
 
 input {
   border: 1px solid #808080;
   border-radius: 4px;
-  width: 360px;
+  width: 272px;
   height: 40px;
   padding-left: 8px;
-  margin-top: 8px;
 }
 
 input:hover {
@@ -77,25 +56,6 @@ input:focus {
   border: 1px solid #808080;
 }
 
-textarea {
-  border: 1px solid #808080;
-  border-radius: 4px;
-  width: 360px;
-  height: 80px;
-  padding-left: 8px;
-  margin-top: 8px;
-  padding-top: 8px;
-  resize: none;
-}
-
-textarea:hover {
-  border: 1px solid #000;
-}
-
-textarea:focus {
-  outline: none;
-  border: 1px solid #808080;
-}
 
 button {
   border-radius: 8px;
@@ -113,4 +73,119 @@ button {
 
 button:hover {
   background: #6c8cff;
+}
+
+
+.loader {
+  width: 48px;
+  height: 48px;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  color: #FFF;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loader::after,
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 50%;
+  left: 50%;
+  transform: scale(0.5) translate(0, 0);
+  background-color: #a19494;
+  border-radius: 50%;
+  animation: animloader 1s infinite ease-in-out;
+}
+
+.loader::before {
+  background-color: #FF3D00;
+  transform: scale(0.5) translate(-48px, -48px);
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes animloader {
+  50% {
+    transform: scale(1) translate(-50%, -50%);
+  }
+}
+
+.js-hidden {
+  visibility: hidden;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.gallery-item {
+  transition: transform 250ms ease-in-out;
+}
+
+.gallery-item:hover {
+  transform: scale(105%);
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-link {
+  position: relative;
+}
+
+.gallery-info-list {
+  display: flex;
+  flex-direction: row;
+  gap: 28px;
+  justify-content: center;
+  border-bottom: 1px solid #808080;
+  border-left: 1px solid #808080;
+  border-right: 1px solid #808080;
+  width: 360px;
+  height: 48px;
+  position: absolute;
+  bottom: 0;
+  background-color: #FFF;
+  transition: transform 250ms ease-in-out;
+}
+
+.gallery-list-item {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4px 0;
+}
+
+.gallery-item-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
